# py-DssQRAgentLocalMcpServer

./: .env.example  INSTALL.md  MANIFEST.in  QUICK_START.md  README.md  mcp_config.txt  pyproject.toml  requirements.txt
dss_agentcore_mcp/: __init__.py  __main__.py  agentcore_client.py  config.py  server.py
